--- a/style.css
+++ b/style.css
@@ -1,4 +1,83 @@
+@import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+
 * {
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
+}
+
+body  {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 28px;
+    gap: 10px;
+}
+
+#title h1 {
+    font-size: 42px;
+    color: #474747;
+}
+
+#title h4 {
+    font-size: 18px;
+    color: #474747;
+}
+
+.container {
+    margin: 24px 8px;
+}
+
+input {
+    width: 30vw;
+    height: 30px;
+    margin-top: 12px;
+    padding: 4px 12px;
+    border: 2px solid #696969;
+    border-radius: 5px;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+label {
+    font-size: 18px;
+    font-weight: 500;
+    color: #383838;
+}
+
+button {
+    font-size: 24px;
+    font-weight: 600;
+    width: 9em;
+    height: 2em;
+    /* padding: 8px 14px; */
+    background-color: rgb(112, 101, 212);
+    box-shadow: 5px 3px 1px rgba(112, 101, 212, 0.5);
+    color: white;
+    border: 0;
+    border-radius: 3px;
+    margin: 8px auto;
+}
+
+#btn-reset {
+    background-color: white;
+    border: 2px solid rgb(112, 101, 212);
+    color: rgb(112, 101, 212);
+}
+
+.btn-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.result {
+    margin: 18px auto;
 }
