add style div result

--- a/style.css
+++ b/style.css
@@ -78,6 +78,8 @@ button {
     justify-content: space-around;
 }
 
-.result {
-    margin: 18px auto;
+#result {
+    margin: 24px auto;
+    font-size: 24px;
+    /* font-weight: 500; */
 }
